@@ -1,4 +1,8 @@
 2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
+	* General/ColoredSwitchButtonCell.m: added -compare: method (some
+	  recent change in GNUstep made ordering of these cells wrong)
+
+2005-01-05  Benhur Stein <benhur@inf.ufsm.br>
 	* Paje/Paje_main.m, Paje/PajeInfo.plist: Changed Copyright notice
 
 2005-01-04  (1.2.2) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
